# mill

./: .gitignore  CMakeLists.txt
includes/learnopengl/: camera.h  mesh.h  model.h
resources/objects/download/1024/: 1024_cube.mtl
resources/objects/download/256/: 256cube.mtl
resources/objects/download/blenderCube/: cubeWithPicture.mtl
resources/objects/download/cube/: mesh.mtl
resources/objects/download/tool/: tool.mtl
resources/objects/download_book/: SweetHome3DKompakt.mtl
resources/objects/mill/bottom/: bottom.mtl
resources/objects/mill/cube/: cube.mtl
resources/objects/mill/tool/: tool.mtl
resources/objects/obj_tool/: tool_obj.blend  tool_obj.blend1  tool_obj.mtl
src/3.model_loading/1.model_loading/: 1.model_loading.fs  1.model_loading.vs  Application.cpp  Application.h  FPSRecorder.cpp  FPSRecorder.h  Method.h  PathManager.cpp  PathManager.h  input_handler.cpp  input_handler.h  light_source.cpp  light_source.h  main.cpp  milling_manager.cpp  milling_manager.h  model_renderer.cpp  model_renderer.h  morton_code.h  quadtree.cpp  quadtree.h  quadtree_node.cpp  quadtree_node.h  renderer_setup.cpp  renderer_setup.h  text_renderer.cpp  text_renderer.h
src/3.model_loading/1.model_loading/shaders/: 1.model_loading.fs  light_cube.fs  model_loading.vs
